Fix comments, add default file warning to io_utils, fix setup to include default rules

--- a/distend/rules.conf
+++ b/distend/rules.conf
@@ -1,13 +1,13 @@
 # place a hash at the start of a line to comment
 
-# rules replaces first string with second string
-# prepend adds a string to the beginning of a word
-# postpend adds a string to the end of a word
+# rules -- replace first string with second string
+# prepend -- add a string to the beginning of a word
+# postpend -- add a string to the end of a word
 
 
 ### RULES
 # original = replacement -- format for rules
-# example below replace 'a' with '4'
+# example below replaces 'a' with '4'
 # a = 4
 
 l = 1
@@ -20,23 +20,23 @@ t = 7
 ### PREPEND
 ## Single Prepend
 # prepend, prefix -- format for single prepend; use magic keyword 'prepend'
-# example below set prepend as '1984'
+# example below sets prepend as '1984'
 # prepend, 1984
 # second example shown below does not work due to missing 'prepend' keyword
 # prep, 1984
 
 ## Multi Prepend
 # prepend, first, second, third -- format for many prepends; similar to csv
-# example below set prepend to both '1984' and '1985'
+# example below sets prepend to both '1984' and '1985'
 # prepend, 1984, 1985
 
-prepend, 1972 
+prepend, 1982
 
 
 ### POSTPEND
 ## Single Postpend
 # postpend, 1984 -- similar to prepend but with the 'postpend' magic keyword
-# example below set postpend to '1984'
+# example below sets postpend to '1984'
 # postpend, 1984
 # remember to use the magic keyword 'postpend'
 
