refactored cli, io_utils, serializer, test_io_utils

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # ignore test files
 /distend/*.txt
+*.txt
 
 # ignore word list files
 /dct
@@ -11,3 +12,4 @@
 /build
 /dist
 /distend_hanzuo.egg-info
+distend.egg*
